--- a/ebike-v1/index.html
+++ b/ebike-v1/index.html
@@ -132,7 +132,7 @@
 	    <p>We can use an estimation of 12.5Wh/km (found <a href="https://www.electricbike.com/watt-hours/">here</a> and <a href="https://endless-sphere.com/forums/viewtopic.php?t=93794">here</a>) to calculate an estimated range of about <b>21kms</b>
 	    
 	    <p>Here is the bike we got : </p>
-	    <img class="img-fluid" src="../photos/photo_velo.jpg">
+	    <img class="img-fluid" src="photos/photo_velo.jpg">
 	    <!-- <img class="img-fluid" src="../photos/cao_v1_face2.png"> -->
 	    
 	</div> <!-- /container -->
