--- a/londres/index.html
+++ b/londres/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-    <a href="[51.497987, -0.174573]">musee</a>
+    <a href="https://maps.google.com/?q=51.497987,-0.174573">musee</a>
 
 </body>
 </html>
