--- a/londres/index.html
+++ b/londres/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 	
 	<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
-	<script type='text/javascript' src='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js'></script>
+	<script type='text/javascript' src='leaflet.js'></script>
     </head>
     
     <body>
